PSA-015 Create Image model and its migration

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_FRONTEND_URL=http://localhost:3000
+DEFAULT_USER_AVATAR=https://cdn-icons-png.flaticon.com/512/711/711769.png
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -50,3 +52,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+L5_SWAGGER_GENERATE_ALWAYS=true
