--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,5 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 L5_SWAGGER_GENERATE_ALWAYS=true
+
+DROPBOX_ACCESS_TOKEN=
