PSG-033 CRUD Report

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_FRONTEND_URL=http://localhost:3000
 DEFAULT_USER_AVATAR=https://cdn-icons-png.flaticon.com/512/711/711769.png
+DEFAULT_REPORT_IMAGE_PATH=https://lifeskillsaustralia.com.au/wp-content/uploads/2019/07/assessment.png
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
